--- a/extensions/vx_khr_icd/1.0.1/vx_khr_icd_1_0_1.html
+++ b/extensions/vx_khr_icd/1.0.1/vx_khr_icd_1_0_1.html
@@ -816,14 +816,11 @@ table.CodeRay td.code>pre{padding:0}
 .CodeRay .change .change{color:#66f}
 .CodeRay .head .head{color:#f4f}
 </style>
-<!--
 <link rel="stylesheet" href="katex/katex.min.css">
 <script src="katex/katex.min.js"></script>
 <script src="katex/contrib/auto-render.min.js"></script>
--->
     <!-- Use KaTeX to render math once document is loaded, see
          https://github.com/Khan/KaTeX/tree/master/contrib/auto-render -->
-<!--
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         renderMathInElement(
@@ -838,9 +835,7 @@ table.CodeRay td.code>pre{padding:0}
             }
         );
     });
-</script>
--->
-</head>
+</script></head>
 <body class="book toc2 toc-left" style="max-width: 100;">
 <div id="header">
 <h1>The OpenVX<sup>&#8482;</sup> Installable Client Driver Loader Extension</h1>
@@ -848,7 +843,7 @@ table.CodeRay td.code>pre{padding:0}
 <span id="author" class="author">The Khronos OpenVX Working Group</span><br>
 <span id="author2" class="author">Editors: Radhakrishna Giduthuri, Xin Wang</span><br>
 <span id="revnumber">version 1.0.1 (provisional),</span>
-<span id="revdate">Wed, 11 Jul 2018 06:06:48 +0000</span>
+<span id="revdate">Wed, 15 Aug 2018 06:03:14 +0000</span>
 <br><span id="revremark">Git branch information not available</span>
 </div>
 <div id="toc" class="toc2">
@@ -1009,7 +1004,7 @@ source are:</p>
 </div>
 <div id="vxFormatImagePatchAddress1d" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL <span class="directive">void</span>* VX_API_ENTRY vxFormatImagePatchAddress1d(
+<pre class="CodeRay highlight"><code data-lang="c"><span class="directive">void</span>* vxFormatImagePatchAddress1d(
     <span class="directive">void</span>*                                       ptr,
     vx_uint32                                   index,
     <span class="directive">const</span> vx_imagepatch_addressing_t*           addr);</code></pre>
@@ -1017,7 +1012,7 @@ source are:</p>
 </div>
 <div id="vxFormatImagePatchAddress2d" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL <span class="directive">void</span>* VX_API_ENTRY vxFormatImagePatchAddress2d(
+<pre class="CodeRay highlight"><code data-lang="c"><span class="directive">void</span>* vxFormatImagePatchAddress2d(
     <span class="directive">void</span>*                                       ptr,
     vx_uint32                                   x,
     vx_uint32                                   y,
@@ -1026,7 +1021,7 @@ source are:</p>
 </div>
 <div id="vxCreateContext" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL vx_context VX_API_ENTRY vxCreateContext(<span class="directive">void</span>);</code></pre>
+<pre class="CodeRay highlight"><code data-lang="c">vx_context vxCreateContext(<span class="directive">void</span>);</code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1272,7 +1267,7 @@ these vendor implementations.</p>
 </div>
 <div id="vx_platform" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c"><span class="keyword">typedef</span> <span class="keyword">struct</span> _vx_platform *vx_platform</code></pre>
+<pre class="CodeRay highlight"><code data-lang="c"><span class="keyword">typedef</span> <span class="keyword">struct</span> _vx_platform *vx_platform;</code></pre>
 </div>
 </div>
 </div>
@@ -1286,7 +1281,7 @@ these vendor implementations.</p>
 </div>
 <div id="vxCreateContextFromPlatform" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL NOAPI vx_context VX_API_ENTRY vxCreateContextFromPlatform(
+<pre class="CodeRay highlight"><code data-lang="c">NOAPI vx_context vxCreateContextFromPlatform(
     vx_platform                                 platform);</code></pre>
 </div>
 </div>
@@ -1306,7 +1301,7 @@ Any possible errors preventing a successful creation should be checked using
 </div>
 <div id="vxIcdGetPlatforms" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL NOAPI vx_status VX_API_ENTRY vxIcdGetPlatforms(
+<pre class="CodeRay highlight"><code data-lang="c">NOAPI vx_status vxIcdGetPlatforms(
     vx_size                                     capacity,
     vx_platform                                 platform[],
     vx_size*                                    pNumItems);</code></pre>
@@ -1352,7 +1347,7 @@ Any possible errors preventing a successful creation should be checked using
 </div>
 <div id="vxQueryPlatform" class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="c">VX_API_CALL NOAPI vx_status VX_API_ENTRY vxQueryPlatform(
+<pre class="CodeRay highlight"><code data-lang="c">NOAPI vx_status vxQueryPlatform(
     vx_platform                                 platform,
     vx_enum                                     attribute,
     <span class="directive">void</span>*                                       ptr,
